@@ -14,7 +14,7 @@
 /*  along with SCIP; see the file COPYING. If not email to scip@zib.de.      */
 /*                                                                           */
 /* * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * */
-#pragma ident "@(#) $Id: solve.c,v 1.241 2006/12/20 16:41:31 bzfberth Exp $"
+#pragma ident "@(#) $Id: solve.c,v 1.242 2007/01/25 18:08:16 bzfpfend Exp $"
 
 /**@file   solve.c
  * @brief  main solving loop and node processing
@@ -721,6 +721,7 @@ SCIP_RETCODE primalHeuristics(
    SCIP_STAT*            stat,               /**< dynamic problem statistics */
    SCIP_PRIMAL*          primal,             /**< primal data */
    SCIP_TREE*            tree,               /**< branch and bound tree */
+   SCIP_LP*              lp,                 /**< LP data */
    SCIP_NODE*            nextnode,           /**< next node that will be processed, or NULL if no more nodes left */
    SCIP_HEURTIMING       heurtiming,         /**< current point in the node solving process */
    SCIP_Bool*            foundsol            /**< pointer to store whether a solution has been found */
@@ -736,6 +737,7 @@ SCIP_RETCODE primalHeuristics(
    assert(set != NULL);
    assert(primal != NULL);
    assert(tree != NULL);
+   assert(lp != NULL);
    assert(heurtiming == SCIP_HEURTIMING_BEFORENODE || heurtiming == SCIP_HEURTIMING_DURINGLPLOOP
       || heurtiming == SCIP_HEURTIMING_AFTERLPLOOP || heurtiming == SCIP_HEURTIMING_AFTERNODE
       || heurtiming == (SCIP_HEURTIMING_AFTERLPLOOP | SCIP_HEURTIMING_AFTERNODE));
@@ -790,10 +792,12 @@ SCIP_RETCODE primalHeuristics(
    depth = SCIPtreeGetFocusDepth(tree);
    lpstateforkdepth = (tree->focuslpstatefork != NULL ? SCIPnodeGetDepth(tree->focuslpstatefork) : -1);
 
-   /* call heuristics */
+   /* call heuristics: it might happen that a diving heuristic renders the previously solved node LP invalid
+    * such that additional calls to LP heuristics will fail; better abort the loop in this case
+    */
    ndelayedheurs = 0;
    oldnbestsolsfound = primal->nbestsolsfound;
-   for( h = 0; h < set->nheurs; ++h )
+   for( h = 0; h < set->nheurs && !lp->resolvelperror; ++h )
    {
       SCIP_CALL( SCIPheurExec(set->heurs[h], set, primal, depth, lpstateforkdepth, heurtiming, &ndelayedheurs, &result) );
    }
@@ -1496,7 +1500,8 @@ SCIP_RETCODE priceAndCutLoop(
       /* call primal heuristics that are applicable during node LP solving loop */
       if( SCIPlpGetSolstat(lp) == SCIP_LPSOLSTAT_OPTIMAL )
       {
-         SCIP_CALL( primalHeuristics(set, stat, primal, tree, NULL, SCIP_HEURTIMING_DURINGLPLOOP, &foundsol) );
+         SCIP_CALL( primalHeuristics(set, stat, primal, tree, lp, NULL, SCIP_HEURTIMING_DURINGLPLOOP, &foundsol) );
+         *lperror = *lperror || lp->resolvelperror;
       }
       else
          foundsol = FALSE;
@@ -2281,8 +2286,15 @@ SCIP_RETCODE solveNode(
    SCIPtreeSetFocusNodeLP(tree, focusnodehaslp);
 
    /* call primal heuristics that should be applied before the node was solved */
-   SCIP_CALL( primalHeuristics(set, stat, primal, tree, NULL, SCIP_HEURTIMING_BEFORENODE, &foundsol) );
+   SCIP_CALL( primalHeuristics(set, stat, primal, tree, lp, NULL, SCIP_HEURTIMING_BEFORENODE, &foundsol) );
    assert(SCIPbufferGetNUsed(set->buffer) == 0);
+
+   /* if diving produced an LP error, switch back to non-LP node */
+   if( lp->resolvelperror )
+   {
+      focusnodehaslp = FALSE;
+      SCIPtreeSetFocusNodeLP(tree, FALSE);
+   }
 
    /* external node solving loop:
     *  - propagate domains
@@ -2453,14 +2465,30 @@ SCIP_RETCODE solveNode(
       {
          if( actdepth == 0 && stat->nruns == 1 && nloops == 1 )
          {
-            SCIP_CALL( primalHeuristics(set, stat, primal, tree, NULL,
+            SCIP_CALL( primalHeuristics(set, stat, primal, tree, lp, NULL,
                   SCIP_HEURTIMING_AFTERLPLOOP | SCIP_HEURTIMING_AFTERNODE, &foundsol) );
             *afternodeheur = TRUE; /* the AFTERNODE heuristics should node be called again after the node */
          }
          else
          {
-            SCIP_CALL( primalHeuristics(set, stat, primal, tree, NULL, SCIP_HEURTIMING_AFTERLPLOOP, &foundsol) );
+            SCIP_CALL( primalHeuristics(set, stat, primal, tree, lp, NULL, SCIP_HEURTIMING_AFTERLPLOOP, &foundsol) );
          }
+      }
+
+      /* check if heuristics leave us with an invalid LP */
+      if( lp->resolvelperror )
+      {
+         if( forcedlpsolve )
+         {
+            SCIPerrorMessage("(node %"SCIP_LONGINT_FORMAT") unresolved numerical troubles in LP %d cannot be dealt with\n",
+               stat->nnodes, stat->nlps);
+            return SCIP_LPERROR;
+         }
+         SCIPtreeSetFocusNodeLP(tree, FALSE);
+         nlperrors++;
+         SCIPmessagePrintVerbInfo(set->disp_verblevel, SCIP_VERBLEVEL_FULL,
+            "(node %"SCIP_LONGINT_FORMAT") unresolved numerical troubles in LP %d -- using pseudo solution instead (loop %d)\n",
+            stat->nnodes, stat->nlps, nlperrors);
       }
 
       /* if an improved solution was found, propagate and solve the relaxations again */
@@ -2999,7 +3027,7 @@ SCIP_RETCODE SCIPsolveCIP(
          nnodes = SCIPtreeGetNNodes(tree);
          if( !afternodeheur && (!cutoff || nnodes > 0) )
          {
-            SCIP_CALL( primalHeuristics(set, stat, primal, tree, nextnode, SCIP_HEURTIMING_AFTERNODE, &foundsol) );
+            SCIP_CALL( primalHeuristics(set, stat, primal, tree, lp, nextnode, SCIP_HEURTIMING_AFTERNODE, &foundsol) );
             assert(SCIPbufferGetNUsed(set->buffer) == 0);
          }
 
